31 May 2016: Wouter
	- Fix windows service to be created run with limited rights, as a
	  network service account, from Mario Turschmann.
	- compat strsep implementation.

30 May 2016: Wouter
	- Fix time in case answer comes from cache in ub_resolve_event().
	- Attempted fix for #765: _unboundmodule missing for python3.

27 May 2016: Wouter
	- Fix #770: Small subgroup attack on DH used in unix pipe on localhost
	  if unbound control uses a unix local named pipe.
	- Document write permission to directory of trust anchor needed.
	- Fix #768:  Unbound Service Sometimes Can Not Shutdown
	  Completely, WER Report Shown Up.  Close handle before closing WSA.

26 May 2016: Wouter
	- Updated patch from Charles Walker.

24 May 2016: Wouter
	- disable-dnssec-lame-check config option from Charles Walker.
	- remove memory leak from lame-check patch.
	- iana portlist update.

23 May 2016: Wouter
	- Fix #767:  Reference to an expired Internet-Draft in
	  harden-below-nxdomain documentation.

20 May 2016: Ralph
	- No QNAME minimisation fall-back for NXDOMAIN answers from DNSSEC 
	  signed zones.
	- iana portlist update.

19 May 2016: Wouter
	- Fix #766: dns64 should synthesize results on timeout/errors.

18 May 2016: Wouter
	- Fix #761: DNSSEC LAME false positive resolving nic.club.

17 May 2016: Wouter
	- trunk updated with output of flex 2.6.0.

6 May 2016: Wouter
	- Fix memory leak in out-of-memory conditions of local zone add.

29 April 2016: Wouter
	- Fix sldns with static checking fixes copied from getdns.

28 April 2016: Wouter
	- Fix #759: 0x20 capsforid no longer checks type PTR, for
	  compatibility with cisco dns guard.  This lowers false positives.

18 April 2016: Wouter
	- Fix some malformed reponses to edns queries get fallback to nonedns.

15 April 2016: Wouter
	- cachedb module event handling design.

14 April 2016: Wouter
	- cachedb module framework (empty).
	- iana portlist update.

12 April 2016: Wouter
	- Fix #753: document dump_requestlist is for first thread.